--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,12 +4,12 @@ on:
   schedule:
   # 7AM on the 1st of every month (GitHub is GMT)
   # https://crontab.guru/#0_7_1_*_*
-    - cron: "0 7 1 * *"
+    # - cron: "0 7 1 * *"
 
-  push:
-    paths-ignore:
-      - 'README.md'
-      - 'LICENSE'
+  # push:
+  #   paths-ignore:
+  #     - 'README.md'
+  #     - 'LICENSE'
 
   workflow_dispatch:
 
