--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: "Build Debian Live Minimal ISO"
 
 on:
-  schedule:
+  # schedule:
   # 7AM on the 1st of every month (GitHub is GMT)
   # https://crontab.guru/#0_7_1_*_*
     # - cron: "0 7 1 * *"
