--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: "Build Debian Live Minimal ISO"
+name: "Build lessbian-builder ISO"
 
 on:
   # schedule:
@@ -36,7 +36,7 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           automatic_release_tag: "${{ env.DATESTAMP }}"
-          title: "Debian 10 Live Minimal ISO"
+          title: "lessbian-builder"
           files: |
-            output/debian10-live-minimal-x86_64.iso
+            output/lessbian-builder.iso
             output/packages.txt
