--- a/supportFiles/isolinux.cfg
+++ b/supportFiles/isolinux.cfg
@@ -15,13 +15,13 @@ MENU COLOR msg07        37;40   #90ffffff #a0000000 std
 MENU COLOR tabmsg       31;40   #30ffffff #00000000 std
 
 LABEL linux
-  MENU LABEL Debian Live
+  MENU LABEL lessbian-builder
   MENU DEFAULT
   KERNEL /live/vmlinuz
   APPEND initrd=/live/initrd boot=live
 
 LABEL linux
-  MENU LABEL Debian Live (nomodeset)
+  MENU LABEL lessbian-builder (nomodeset)
   MENU DEFAULT
   KERNEL /live/vmlinuz
   APPEND initrd=/live/initrd boot=live nomodeset
