--- a/supportFiles/grub.cfg
+++ b/supportFiles/grub.cfg
@@ -1,7 +1,7 @@
 search --set=root --file /DEBIAN_CUSTOM
 
 set default="0"
-set timeout=30
+set timeout=1
 
 # If X has issues finding screens, experiment with/without nomodeset.
 # Load EFI video drivers. This device is EFI so keep the
@@ -18,12 +18,12 @@ then
 fi
 
 menuentry "Debian Live [EFI/GRUB]" {
-    linux ($root)/live/vmlinuz boot=live
+    linux ($root)/live/vmlinuz boot=live console=ttyS0
     initrd ($root)/live/initrd
 }
 
 menuentry "Debian Live [EFI/GRUB] (nomodeset)" {
-    linux ($root)/live/vmlinuz boot=live nomodeset
+    linux ($root)/live/vmlinuz boot=live nomodeset console=ttyS0
     initrd ($root)/live/initrd
 }
 
