--- a/supportFiles/isolinux.cfg
+++ b/supportFiles/isolinux.cfg
@@ -18,10 +18,10 @@ LABEL linux
   MENU LABEL lessbian-builder
   MENU DEFAULT
   KERNEL /live/vmlinuz
-  APPEND initrd=/live/initrd boot=live
+  APPEND initrd=/live/initrd boot=live console=ttyS0
 
 LABEL linux
   MENU LABEL lessbian-builder (nomodeset)
   MENU DEFAULT
   KERNEL /live/vmlinuz
-  APPEND initrd=/live/initrd boot=live nomodeset
+  APPEND initrd=/live/initrd boot=live nomodeset console=ttyS0
