--- a/supportFiles/grub.cfg
+++ b/supportFiles/grub.cfg
@@ -18,12 +18,12 @@ then
 fi
 
 menuentry "Debian Live [EFI/GRUB]" {
-    linux ($root)/live/vmlinuz boot=live console=ttyS0
+    linux ($root)/live/vmlinuz boot=live console=ttyS0,115200n8
     initrd ($root)/live/initrd
 }
 
 menuentry "Debian Live [EFI/GRUB] (nomodeset)" {
-    linux ($root)/live/vmlinuz boot=live nomodeset console=ttyS0
+    linux ($root)/live/vmlinuz boot=live nomodeset console=ttyS0,115200n8
     initrd ($root)/live/initrd
 }
 
